--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="logo.png" alt="Synapse Logo">
+            <img src="Logo.png" alt="Synapse Logo">
             <h1>Synapse</h1>
         </div>
         
