fixed the website image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="sidebar">
         <div class="logo-container">
-            <img src="logo.png" alt="Synapse Logo">
+            <img src="Logo.png" alt="Synapse Logo">
         </div>
         <hr>
         <h3>Online Users</h3>
