--- a/login.html
+++ b/login.html
@@ -15,12 +15,14 @@
         </div>
         
         <h2>Login</h2>
-        <form action="#" method="post">
-            <input type="text" placeholder="Username or Email" required>
-            <input type="password" placeholder="Password" required>
+        <form onsubmit="login(event)">
+            <input type="text" id="username" placeholder="Username or Email" required>
+            <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Login</button>
         </form>
         <p>Don't have an account? <br><a href="register.html">Register here</a></p>
     </div>
+
+    <script src="login.js"></script>
 </body>
 </html>
