--- a/register.html
+++ b/register.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synapse - Register</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-     
         <div class="logo">
-            <img src="logo.png" alt="Synapse Logo">
+            <img src="Logo.png" alt="Synapse Logo">
             <h1>Synapse</h1>
         </div>
-<br>
+        
         <h2>Register</h2>
-        <form action="#" method="post">
-            <input type="text" placeholder="Username" required>
-            <input type="email" placeholder="Email" required>
-            <input type="password" placeholder="Password" required>
-            <input type="password" placeholder="Confirm Password" required>
+        <form id="registerForm" onsubmit="register(event)">
+            <input type="text" id="username" placeholder="Username" required>
+            <input type="email" id="email" placeholder="Email" required>
+            <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Register</button>
         </form>
         <p>Already have an account? <br><a href="login.html">Login here</a></p>
     </div>
+
+    <script src="register.js"></script>
 </body>
 </html>
