Login redirection corrected

--- a/login.html
+++ b/login.html
@@ -46,7 +46,7 @@
             formData.append('password', password);
 
             // Send the login request to the backend using fetch
-            fetch(`https://live-chat-app-backend-au8y.onrender.com`, { // Ensure backend URL is correct
+            fetch(`https://live-chat-app-backend-au8y.onrender.com/login`, { // Ensure backend URL is correct
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded'
