added the friend list option

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Synapse Chat</title>
     <link rel="stylesheet" href="styles.css">
-</head>
+</head> 
 <body>
     <div class="sidebar">
         <div class="logo-container">
             <img src="Logo.png" alt="Synapse Logo">
         </div>
+        <hr>
+        <h3>Friends</h3>
+        <ul id ="friendList">
+        </ul>
         <hr>
         <h3>Online Users</h3>
         <ul id="userList">
@@ -32,4 +36,4 @@
 
     <script src="index.js"></script>
 </body>
-</html>
+</html> 
