--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
             formData.append('username', username);
             formData.append('password', password);
 
-            fetch(`http://127.0.0.1:8000/login`, {
+            fetch(`https://live-chat-frontend-j8b3.onrender.com/login`, {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded'
